--- a/BisuTestApp/GoogleService-Info.plist
+++ b/BisuTestApp/GoogleService-Info.plist
@@ -19,15 +19,19 @@
 	<key>STORAGE_BUCKET</key>
 	<string>bisutestapp.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
+	<key>FIREBASE_ANALYTICS_COLLECTION_ENABLED</key>
+	<true/>
+	<key>FirebaseScreenReportingEnabled</key>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:378429990480:ios:0e29b806d98361d7215355</string>
 	<key>DATABASE_URL</key>
